Since the bootstrap process requires that several of the rules for files generated in doc and tests already lived in $top_srcdir/Makefile.am, along with proxy rules in sub-Makefiles, this changeset consolidates almost everything into the top Makefile.am, simplifying things considerably:
* doc/Makefile.am, tests/Makefile.am: Removed.  All rules moved...
* Makefile.am: ...to here and adjusted to run from $top_builddir.
simplify with respect to removing much of the make recursion.
Add `doc/PLATFORMS', `doc/fdl.texi' and `doc/notes.texi'.
`defs.in' and `defs.m4sh' are in directory `tests'.
(uninstall-hook): Don't forget to uninstall libtoolize's libltdl
source tree.
(lt__cd): New make macros to work around problems with CDPATH in
some shells.
* bootstrap: Simplified dirty makefile management, and bootstrap
file creation in light of having only a single pertinent
Makefile.
* configure.ac (CONF_SUBDIRS): Add tests/ prefix to each subdir to
compensate.
(DIST_MAKEFILE_LIST): Adjust.
(AC_CONFIG_FILES): Remove doc/Makefile and tests/Makefile.
* tests/defs.m4sh (LIBTOOL, scripts): Adjust paths.
* tests/cdemo-conf.test, tests/cdemo-exec.test,
tests/cdemo-make.test, tests/cdemo-shared.test,
tests/cdemo-static.test, tests/cdemo-undef.test,
tests/demo-conf.test, tests/demo-deplibs.test,
tests/demo-exec.test, tests/demo-hardcode.test,
tests/demo-inst.test, tests/demo-make.test,
tests/demo-nofast.test, tests/demo-noinst-link.test,
tests/demo-nopic.test, tests/demo-pic.test,
tests/demo-relink.test, tests/demo-shared.test,
tests/demo-static.test, tests/demo-unst.test,
tests/depdemo-conf.test, tests/depdemo-exec.test,
tests/depdemo-inst.test, tests/depdemo-make.test,
tests/depdemo-nofast.test, tests/depdemo-relink.test,
tests/depdemo-shared.test, tests/depdemo-static.test,
tests/depdemo-unst.test, tests/f77demo-conf.test,
tests/f77demo-exec.test, tests/f77demo-make.test,
tests/f77demo-shared.test, tests/f77demo-static.test,
tests/link-2.test, tests/link.test, tests/mdemo-conf.test,
tes

--- a/Makefile.am
+++ b/Makefile.am
@@ -19,6 +19,59 @@
 
 ACLOCAL_AMFLAGS  = -I m4
 
+BUILD_SUBDIRS	= . libltdl
+SUBDIRS		= $(BUILD_SUBDIRS)
+DIST_SUBDIRS	= $(BUILD_SUBDIRS)
+EXTRA_DIST	=
+
+# Using `cd' in backquotes may print the directory name, use this instead:
+lt__cd		= CDPATH="$${ZSH_VERSION+.}$(PATH_SEPARATOR)" && cd
+
+
+## ---------------- ##
+## Libtool scripts. ##
+## ---------------- ##
+
+# The libtool distributor and the standalone libtool script.
+bin_SCRIPTS = libtoolize libtool
+
+libtoolize: $(srcdir)/libtoolize.in
+	rm -f libtoolize.tmp libtoolize
+	$(timestamp); \
+	input="libtoolize.m4sh"; \
+	$(edit) -e "s,@TIMESTAMP\@,$$TIMESTAMP,g" \
+		-e 's,@aclocal_DATA\@,$(aclocal_DATA),g' \
+		-e "s,@pkgvltdl_files\@,$(ltdldatafiles),g" \
+		$(srcdir)/libtoolize.in > libtoolize.tmp
+	chmod a+x libtoolize.tmp
+	chmod a-w libtoolize.tmp
+	mv -f libtoolize.tmp libtoolize
+
+# Use `$(srcdir)' for the benefit of non-GNU makes: this is
+# how libtoolize.in appears in our dependencies.
+EXTRA_DIST += libtoolize.m4sh
+$(srcdir)/libtoolize.in: $(sh_files) libtoolize.m4sh Makefile.am
+	cd $(srcdir); \
+	rm -f libtoolize.in; \
+	$(M4SH) -B ./config libtoolize.m4sh > libtoolize.in
+
+libtool: $(top_builddir)/config.status $(srcdir)/config/ltmain.sh \
+	 $(srcdir)/stamp-vcl
+	cd $(top_builddir) && $(SHELL) ./config.status $@
+
+.PHONY: configure-subdirs
+configure-subdirs distdir: $(DIST_MAKEFILE_LIST)
+@DIST_MAKEFILE_LIST@:
+	dir=`echo $@ | sed 's,^[^/]*$$,.,;s,/[^/]*$$,,'`; \
+	test -d $$dir || mkdir $$dir || exit 1; \
+	abs_srcdir=`$(lt__cd) $(srcdir) && pwd`; \
+	(cd $$dir && $$abs_srcdir/$$dir/configure) || exit 1
+
+
+# ---------- #
+# Bootstrap. #
+# ---------- #
+
 edit = sed \
 	-e 's,@EGREP\@,$(EGREP),g' \
 	-e 's,@FGREP\@,$(FGREP),g' \
@@ -26,56 +79,58 @@ edit = sed \
 	-e 's,@LN_S\@,$(LN_S),g' \
 	-e 's,@MACRO_VERSION\@,$(VERSION),g' \
 	-e 's,@PACKAGE\@,$(PACKAGE),g' \
+	-e 's,@PACKAGE_BUGREPORT\@,$(PACKAGE_BUGREPORT),g' \
+	-e 's,@PACKAGE_NAME\@,$(PACKAGE_NAME),g' \
+	-e 's,@PACKAGE_STRING\@,$(PACKAGE) $(VERSION),g' \
+	-e 's,@PACKAGE_TARNAME\@,$(PACKAGE),g' \
+	-e 's,@PACKAGE_VERSION\@,$(VERSION),g' \
 	-e 's,@SED\@,$(SED),g' \
 	-e 's,@VERSION\@,$(VERSION),g' \
-	-e 's,@prefix\@,$(prefix),g' \
-	-e 's,@datadir\@,$(datadir),g' \
-	-e 's,@pkgdatadir\@,$(pkgdatadir),g' \
 	-e 's,@aclocaldir\@,$(aclocaldir),g' \
+	-e 's,@datadir\@,$(datadir),g' \
 	-e 's,@host_triplet\@,$(host_triplet),g' \
+	-e 's,@pkgdatadir\@,$(pkgdatadir),g' \
+	-e 's,@prefix\@,$(prefix),g' \
 	-e "s,@configure_input\@,Generated from $$input; do not edit by hand,g"
 
-timestamp = set dummy `$(MKSTAMP) < $(top_srcdir)/ChangeLog`; shift; \
+timestamp = set dummy `$(MKSTAMP) < $(srcdir)/ChangeLog`; shift; \
 	case $(VERSION) in \
 	  *[acegikmoqsuwy]) TIMESTAMP=" $$1 $$2 $$3" ;; \
 	  *) TIMESTAMP="" ;; \
 	esac
 
-BUILD_SUBDIRS = . libltdl doc tests
-SUBDIRS = $(BUILD_SUBDIRS)
-DIST_SUBDIRS = $(BUILD_SUBDIRS)
-
-sh_files = config/general.m4sh config/getopt.m4sh
-EXTRA_DIST = bootstrap libtoolize.in config/ltmain.m4sh config/mkstamp \
-	$(sh_files) stamp-vcl ChangeLog.1996 ChangeLog.1997 ChangeLog.1998 \
-	ChangeLog.1999 ChangeLog.2000 ChangeLog.2001 ChangeLog.2002 \
-	ChangeLog.2003
-CLEANFILES = libtool libtoolize \
-	libtoolize.tmp config/ltmain.tmp m4/ltversion.tmp
+sh_files	= config/general.m4sh config/getopt.m4sh
+EXTRA_DIST     += bootstrap libtoolize.in config/ltmain.m4sh config/mkstamp \
+		  $(sh_files) stamp-vcl ChangeLog.1996 ChangeLog.1997 \
+		  ChangeLog.1998 ChangeLog.1999 ChangeLog.2000 ChangeLog.2001 \
+		  ChangeLog.2002 ChangeLog.2003
+CLEANFILES	= libtool libtoolize \
+		  libtoolize.tmp config/ltmain.tmp m4/ltversion.tmp
+DISTCLEANFILES	=
 
 # These are required by libtoolize and must be executable when installed.
 # Since _SCRIPTS gets the program transform applied we make them
 # executable by hand
-dist_pkgdata_DATA = config/config.guess config/config.sub config/ltmain.sh \
-	config/install-sh
+nobase_dist_pkgdata_DATA = config/config.guess config/config.sub \
+	config/ltmain.sh config/install-sh
 
 # Everything that gets picked up by aclocal is automatically distributed,
 # this is the list of macro files we install on the user's system.
-aclocal_DATA = m4/argz.m4 m4/libtool.m4 m4/ltdl.m4 \
+nobase_aclocal_DATA = m4/argz.m4 m4/libtool.m4 m4/ltdl.m4 \
 	m4/ltoptions.m4 m4/ltsugar.m4 m4/ltversion.m4
 
-## We know that $(top_srcdir)/ChangeLog has been edited if stamp-vcl
-## needs updating, so we assume we have write access to $(top_srcdir).
+## We know that $(srcdir)/ChangeLog has been edited if stamp-vcl
+## needs updating, so we assume we have write access to $(srcdir).
 ## If we try to maintain ./stamp-vcl to avoid writing to a possibly
-## read-only $(top_srcdir), then when the two stamp-vcls differ, distcheck
+## read-only $(srcdir), then when the two stamp-vcls differ, distcheck
 ## will try to update the one in the read-only source tree it makes.
-MKSTAMP = $(SHELL) $(top_srcdir)/config/mkstamp
-$(top_srcdir)/stamp-vcl: vcl-tmp clean-ltmain-sh ChangeLog
+MKSTAMP = $(SHELL) $(srcdir)/config/mkstamp
+$(srcdir)/stamp-vcl: vcl-tmp clean-ltmain-sh ChangeLog
 vcl-tmp:
-	@set dummy `$(MKSTAMP) < $(top_srcdir)/ChangeLog`; shift; \
+	@set dummy `$(MKSTAMP) < $(srcdir)/ChangeLog`; shift; \
 	echo "$$1" > vcl.tmp; \
-	cmp -s vcl.tmp $(top_srcdir)/stamp-vcl \
-	  || (echo "Updating stamp-vcl"; cp vcl.tmp $(top_srcdir)/stamp-vcl)
+	cmp -s vcl.tmp $(srcdir)/stamp-vcl \
+	  || (echo "Updating stamp-vcl"; cp vcl.tmp $(srcdir)/stamp-vcl)
 	-@rm -f vcl.tmp
 
 ## We used to build ltmain.sh in the build tree, but now it is created
@@ -83,7 +138,7 @@ vcl-tmp:
 ## previous builds left behind in the build tree, that would override the
 ## source tree version in current builds.
 clean-ltmain-sh:
-	@-test "$(top_srcdir)" = "$(top_builddir)" || \
+	@-test "$(srcdir)" = "$(top_builddir)" || \
 	  rm -f "$(top_builddir)/config/ltmain.sh"
 
 # We build ltversion.m4 here, instead of from config.status,
@@ -91,12 +146,12 @@ clean-ltmain-sh:
 # dependencies change and ltversion.m4 happens to be a configure
 # dependency.  configure and ltversion.m4 would be rebuilt in
 # a loop otherwise.
-# Use `$(top_srcdir)/m4' for the benefit of non-GNU makes: this is
+# Use `$(srcdir)/m4' for the benefit of non-GNU makes: this is
 # how ltversion.m4 appears in our dependencies.
 EXTRA_DIST += m4/ltversion.in m4/ltversion.m4
-$(top_srcdir)/m4/ltversion.m4: m4/ltversion.in configure.ac $(top_srcdir)/stamp-vcl
-	set dummy `$(MKSTAMP) < $(top_srcdir)/ChangeLog`; shift; \
-	cd $(top_srcdir); \
+$(srcdir)/m4/ltversion.m4: m4/ltversion.in configure.ac $(srcdir)/stamp-vcl
+	set dummy `$(MKSTAMP) < $(srcdir)/ChangeLog`; shift; \
+	cd $(srcdir); \
 	rm -f m4/ltversion.tmp; \
 	serial=`echo $$1 | sed 's,^1[.],,g'`; \
 	input="ltversion.in"; \
@@ -108,16 +163,16 @@ $(top_srcdir)/m4/ltversion.m4: m4/ltversion.in configure.ac $(top_srcdir)/stamp-
 
 ## And for similar reasons, ltmain.sh can't be built from config.status.
 ## WARNING: If you edit this rule to change the contents of ltmain.sh,
-##          you must `touch $(top_srcdir)/config/ltmain.in' from the
+##          you must `touch $(srcdir)/config/ltmain.in' from the
 ##          shell if you need ltmain.sh to be regenerated.  Ideally, we
 ##          should make this rule depend on Makefile but that will break
 ##          distcheck (at least) by rebuilding ltmain.sh in the source
 ##          tree whenever config.status regenerates the Makefile.
 EXTRA_DIST += config/ltmain.sh
-$(top_srcdir)/config/ltmain.sh: $(sh_files) config/ltmain.m4sh configure.ac \
-				$(top_srcdir)/stamp-vcl
+$(srcdir)/config/ltmain.sh: $(sh_files) config/ltmain.m4sh configure.ac \
+				$(srcdir)/stamp-vcl
 	$(timestamp); \
-	cd $(top_srcdir); \
+	cd $(srcdir); \
 	rm -f config/ltmain.in config/ltmain.tmp config/ltmain.sh; \
 	$(M4SH) -B ./config config/ltmain.m4sh > config/ltmain.in; \
 	input="ltmain.m4sh"; \
@@ -128,59 +183,19 @@ $(top_srcdir)/config/ltmain.sh: $(sh_files) config/ltmain.m4sh configure.ac \
 	chmod a-w config/ltmain.tmp; \
 	mv -f config/ltmain.tmp config/ltmain.sh
 
-# The libtool distributor and the standalone libtool script.
-bin_SCRIPTS = libtoolize libtool
 
-libtoolize: $(top_srcdir)/libtoolize.in
-	rm -f libtoolize.tmp libtoolize
-	$(timestamp); \
-	input="libtoolize.m4sh"; \
-	$(edit) -e "s,@TIMESTAMP\@,$$TIMESTAMP,g" \
-		-e 's,@aclocal_DATA\@,$(aclocal_DATA),g' \
-		-e "s,@pkgvltdl_files\@,$(ltdldatafiles),g" \
-		$(top_srcdir)/libtoolize.in > libtoolize.tmp
-	chmod a+x libtoolize.tmp
-	chmod a-w libtoolize.tmp
-	mv -f libtoolize.tmp libtoolize
+## -------------- ##
+## Documentation. ##
+## -------------- ##
 
-# Use `$(top_srcdir)' for the benefit of non-GNU makes: this is
-# how libtoolize.in appears in our dependencies.
-EXTRA_DIST += libtoolize.m4sh
-$(top_srcdir)/libtoolize.in: $(sh_files) libtoolize.m4sh Makefile.am
-	cd $(top_srcdir); \
-	rm -f libtoolize.in; \
-	$(M4SH) -B ./config libtoolize.m4sh > libtoolize.in
+info_TEXINFOS		= doc/libtool.texi
+libtool_TEXINFOS	= doc/PLATFORMS doc/fdl.texi
+EXTRA_DIST	       += $(libtool_TEXINFOS)
 
-# The defs script shouldn't be recreated whenever the Makefile is
-# regenerated since the source tree can be read-only.
-check-recursive: tests/defs
-tests/defs: $(top_srcdir)/tests/defs.in
-	rm -f tests/defs.tmp tests/defs; \
-	input="defs.m4sh"; \
-	$(edit) $(top_srcdir)/tests/defs.in > tests/defs.tmp; \
-	mv -f tests/defs.tmp tests/defs
 
-# Use `$(top_srcdir)/tests' for the benefit of non-GNU makes: this is
-# how defs.in appears in our dependencies.
-# No need to EXTRA_DIST defs.m4sh here, that is handled in tests/Makefile.am.
-$(top_srcdir)/tests/defs.in: config/general.m4sh tests/defs.m4sh Makefile.am
-	cd $(top_srcdir); \
-	rm -f tests/defs.in; \
-	$(M4SH) -B ./config tests/defs.m4sh > tests/defs.in
-
-# Automake doesn't want us to generate distributed files from config.status,
-# but the alternative (see libtool-1.4.3) was even uglier!
-libtool: $(top_builddir)/config.status $(top_srcdir)/config/ltmain.sh \
-	 $(top_srcdir)/stamp-vcl
-	cd $(top_builddir) && $(SHELL) ./config.status $@
-
-.PHONY: configure-subdirs
-configure-subdirs distdir: $(DIST_MAKEFILE_LIST)
-@DIST_MAKEFILE_LIST@:
-	dir=`echo $@ | sed 's,^[^/]*$$,.,;s,/[^/]*$$,,'`; \
-	test -d $$dir || mkdir $$dir || exit 1; \
-	abs_srcdir=`cd $(top_srcdir) && pwd`; \
-	(cd $$dir && $$abs_srcdir/$$dir/configure) || exit 1
+## ------------- ##
+## Installation. ##
+## ------------- ##
 
 ## These are installed as a subdirectory of pkgdatadir so that
 ## libtoolize --ltdl can find them later:
@@ -227,6 +242,18 @@ install-data-hook:
 	chmod +x $(DESTDIR)$(pkgdatadir)/config.sub
 	chmod +x $(DESTDIR)$(pkgdatadir)/install-sh
 
+
+## ------------- ##
+## Distribution. ##
+## ------------- ##
+
+uninstall-hook:
+	@for f in $(ltdldatafiles); do \
+	  echo " rm -rf '$(DESTDIR)$(ltdldatadir)/$$f'"; \
+	  rm -rf "$(DESTDIR)$(ltdldatadir)/$$f"; \
+	done
+
+
 ## Ship README.alpha only in alpha release, but renamed to README
 dist-hook:
 	-@test -f $(distdir)/README.alpha && \
@@ -234,3 +261,114 @@ dist-hook:
 	  *[a-z]) mv $(distdir)/README.alpha $(distdir)/README ;; \
 	  *)	  rm -f $(distdir)/README.alpha ;; \
 	esac
+
+
+## ----------- ##
+## Test suite. ##
+## ----------- ##
+
+
+CXX_TESTS = \
+	tests/tagdemo-static.test tests/tagdemo-make.test \
+	tests/tagdemo-exec.test tests/tagdemo-conf.test \
+	tests/tagdemo-make.test tests/tagdemo-exec.test \
+	tests/tagdemo-shared.test tests/tagdemo-make.test \
+	tests/tagdemo-exec.test tests/tagdemo-undef.test \
+	tests/tagdemo-make.test tests/tagdemo-exec.test
+
+F77_TESTS = \
+	tests/f77demo-static.test tests/f77demo-make.test \
+	tests/f77demo-exec.test tests/f77demo-conf.test \
+	tests/f77demo-make.test tests/f77demo-exec.test \
+	tests/f77demo-shared.test tests/f77demo-make.test \
+	tests/f77demo-exec.test
+
+COMMON_TESTS = \
+	tests/link.test tests/link-2.test tests/nomode.test \
+	tests/objectlist.test tests/quote.test tests/sh.test \
+	tests/suffix.test tests/tagtrace.test \
+	tests/cdemo-static.test tests/cdemo-make.test tests/cdemo-exec.test \
+	tests/demo-static.test tests/demo-make.test tests/demo-exec.test \
+	tests/demo-inst.test tests/demo-unst.test \
+	tests/depdemo-static.test tests/depdemo-make.test \
+	tests/depdemo-exec.test tests/depdemo-inst.test \
+	tests/depdemo-unst.test \
+	tests/mdemo-static.test tests/mdemo-make.test tests/mdemo-exec.test \
+	tests/mdemo-inst.test tests/mdemo-unst.test \
+	tests/cdemo-conf.test tests/cdemo-make.test tests/cdemo-exec.test \
+	tests/demo-conf.test tests/demo-make.test tests/demo-exec.test \
+	tests/demo-inst.test tests/demo-unst.test tests/demo-deplibs.test \
+	tests/depdemo-conf.test tests/depdemo-make.test \
+	tests/depdemo-exec.test tests/depdemo-inst.test \
+	tests/depdemo-unst.test \
+	tests/mdemo-conf.test tests/mdemo-make.test tests/mdemo-exec.test \
+	tests/mdemo-inst.test tests/mdemo-unst.test tests/mdemo-dryrun.test \
+	tests/mdemo2-conf.test tests/mdemo2-make.test tests/mdemo2-exec.test \
+	tests/pdemo-conf.test tests/pdemo-make.test tests/pdemo-exec.test \
+	tests/pdemo-inst.test \
+	tests/demo-nofast.test tests/demo-make.test tests/demo-exec.test \
+	tests/demo-inst.test tests/demo-unst.test \
+	tests/depdemo-nofast.test tests/depdemo-make.test \
+	tests/depdemo-exec.test tests/depdemo-inst.test \
+	tests/depdemo-unst.test \
+	tests/demo-pic.test tests/demo-make.test tests/demo-exec.test \
+	tests/demo-nopic.test tests/demo-make.test tests/demo-exec.test \
+	tests/cdemo-shared.test tests/cdemo-make.test tests/cdemo-exec.test \
+	tests/demo-shared.test tests/demo-make.test tests/demo-exec.test \
+	tests/demo-inst.test tests/demo-hardcode.test tests/demo-relink.test \
+	tests/demo-noinst-link.test tests/demo-unst.test \
+	tests/depdemo-shared.test tests/depdemo-make.test \
+	tests/depdemo-exec.test tests/depdemo-inst.test \
+	tests/depdemo-relink.test tests/depdemo-unst.test \
+	tests/mdemo-shared.test tests/mdemo-make.test tests/mdemo-exec.test \
+	tests/mdemo-inst.test tests/mdemo-unst.test \
+	tests/cdemo-undef.test tests/cdemo-make.test tests/cdemo-exec.test
+
+if HAVE_CXX
+if HAVE_F77
+TESTS = $(COMMON_TESTS) $(CXX_TESTS) $(F77_TESTS)
+else
+TESTS = $(COMMON_TESTS) $(CXX_TESTS)
+endif
+else
+if HAVE_F77
+TESTS = $(COMMON_TESTS) $(F77_TESTS)
+else
+TESTS = $(COMMON_TESTS)
+endif
+endif
+
+tests/demo-conf.test: libtool
+
+EXTRA_DIST     += tests/defs.in tests/defs.m4sh \
+		  $(COMMON_TESTS) $(CXX_TESTS) $(F77_TESTS)
+DIST_SUBDIRS   += $(CONF_SUBDIRS)
+
+# The defs script shouldn't be recreated whenever the Makefile is
+# regenerated since the source tree can be read-only.
+check-recursive: tests/defs
+tests/defs: $(srcdir)/tests/defs.in
+	test -d tests || mkdir tests
+	rm -f tests/defs.tmp tests/defs
+	input="defs.m4sh"; \
+	$(edit) $(srcdir)/tests/defs.in > tests/defs.tmp; \
+	mv -f tests/defs.tmp tests/defs
+
+# Use `$(srcdir)/tests' for the benefit of non-GNU makes: this is
+# how defs.in appears in our dependencies.
+$(srcdir)/tests/defs.in: config/general.m4sh tests/defs.m4sh Makefile.am
+	cd $(srcdir); \
+	rm -f tests/defs.in; \
+	$(M4SH) -B ./config tests/defs.m4sh > tests/defs.in
+
+# We need to remove any files that the above tests created.
+clean-local:
+	-cd tests; \
+	for dir in cdemo demo depdemo f77demo mdemo mdemo2 pdemo tagdemo; \
+	do \
+	    test -f $$dir/Makefile && ( cd $$dir && $(MAKE) distclean; ); \
+	done
+	rm -rf _inst
+
+$(TESTS): tests/defs
+DISTCLEANFILES += tests/defs
