* libltdl/configure.ac (AC_OUTPUT): loaders/Makefile.am is no longer used.

--- a/libltdl/configure.ac
+++ b/libltdl/configure.ac
@@ -76,5 +76,5 @@ LTDL_INIT
 ## -------- ##
 ## Outputs. ##
 ## -------- ##
-AC_CONFIG_FILES([Makefile loaders/Makefile])
+AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
