* libltdl/Makefile.am (local-install-files): Rename back from install-data-local. * Makefile.am (install-data-hook):  Readd call to local-install-files. * NEWS: Updated. Fixes libltdl install regression introduced in 1.5.16.

--- a/Makefile.am
+++ b/Makefile.am
@@ -72,6 +72,7 @@ configure-subdirs distdir: $(DIST_MAKEFILE_LIST)
 
 # Create and install libltdl
 install-data-hook:
+	cd libltdl && $(MAKE) local-install-files
 	chmod +x $(DESTDIR)$(pkgdatadir)/config.guess
 	chmod +x $(DESTDIR)$(pkgdatadir)/config.sub
 	chmod +x $(DESTDIR)$(pkgdatadir)/install-sh
