* Makefile.am (install-data-local): Have root own of installed files (but do not fail, for user installs).

--- a/Makefile.am
+++ b/Makefile.am
@@ -236,6 +236,8 @@ install-data-local:
 	$(mkinstalldirs) $(DESTDIR)$(ltdldatadir)
 	( cd $(srcdir)/libltdl && $(AMTAR) chf - $(ltdldatafiles); ) \
 	  | ( umask 0 && cd $(DESTDIR)$(ltdldatadir) && $(AMTAR) xf -; )
+	chown -R root $(DESTDIR)$(ltdldatadir) && \
+	chgrp -R root $(DESTDIR)$(ltdldatadir) || :
 
 install-data-hook:
 	chmod +x $(DESTDIR)$(pkgdatadir)/config.guess
