* libltdl/Makefile.am (local-install-files): Have root own of installed files (but do not fail, for user installs).

--- a/libltdl/Makefile.am
+++ b/libltdl/Makefile.am
@@ -47,3 +47,5 @@ local-install-files: $(ltdldatafiles)
 	$(mkinstalldirs) $(DESTDIR)$(ltdldatadir)
 	( cd $(srcdir) && $(AMTAR) chf - $(ltdldatafiles); ) \
 	  | ( umask 0 && cd $(DESTDIR)$(ltdldatadir) && $(AMTAR) xf -; )
+	chown -R root $(DESTDIR)$(ltdldatadir) && \
+	chgrp -R root $(DESTDIR)$(ltdldatadir) || :
